Implement metrics controllers and tests
* Add new status OK and conflict.
* Fix controller name for /monitors/{monitorId}/metrics/{metricId}.
* Fix schema for metric param in updateMetric controller.
* Add tests for 404 and 409 status in metrics controllers.
* Add helper for automating data driven tests.
